--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
     <head>
         <title>My awesome web page</title>
     </head>
+    <body>
+        
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
 
+    <body style="background-colour:lavender;">
+        
+    <p style="colour:midnightblue;">
     <body>
          Some content.
     </body>
