--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         
     <p style="colour:midnightblue;">
     <body>
-         Some content.
+     <img src="https://octodex.github.com/images/vinyltocat.png">
     </body>
 </html>
