--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <li>This</li>
     <li>Is an</li>
     <li>Ordered list</li>
+       <li>My favorite site is <a
+ href="https://github.com">This is a link to GitHub!</a></li>  
     </ol>
         
      <ul>
